<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/nome">

            <EditText
                android:id="@+id/et_animais_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginRight="@dimen/input_layout_margin">

            <TextView
                android:id="@+id/tv_animais_lote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lote1"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_animais_lote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_animais_lote"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginRight="@dimen/input_layout_margin">

            <TextView
                android:id="@+id/tv_animais_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sexo"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_animais_sexo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp">

                <RadioButton
                    android:id="@+id/rb_animais_macho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/macho" />

                <RadioButton
                    android:id="@+id/rb_animais_femea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_layout_margin"
                    android:text="@string/f_mea"
                    android:layout_marginStart="@dimen/input_layout_margin" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_dt_entrada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/data_de_entrada">
            <EditText
                android:id="@+id/et_animais_dt_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_dt_primeira_pesagem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/data_primeira_pesagem">

            <EditText
                android:id="@+id/et_animais_dt_primeira_pesagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_primeiro_peso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/primeiro_peso">
            <EditText
                android:id="@+id/et_animais_primeiro_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginRight="@dimen/input_layout_margin">

            <TextView
                android:id="@+id/tv_animais_raca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/raca"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_animais_raca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_animais_raca"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_preco_compra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/preco_compra">
            <EditText
                android:id="@+id/et_animais_preco_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_dt_nascimento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/data_de_desmame">
            <EditText
                android:id="@+id/et_animais_dt_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_dt_desmame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/data_de_nascimento">
            <EditText
                android:id="@+id/et_animais_dt_desmame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_animais_observacoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/input_layout_margin"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:layout_marginEnd="@dimen/input_layout_margin"
            android:hint="@string/observacoes">

            <EditText
                android:id="@+id/et_animais_observacoes"
                android:lines="8"
                android:minLines="6"
                android:maxLines="10"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>